Re-sized understory-bg-blank images to keep original aspect ratio. This avoids the image appearing quite so squashed.

--- a/understory/static/css/understory.css
+++ b/understory/static/css/understory.css
@@ -266,25 +266,25 @@ h5 {
 
 /* Background images */
 .no-webp .jumbotron {
- background: url("../img/understory-bg-blank-v3-1.jpg") fixed center no-repeat;
+ background: url("../img/understory-bg-blank-v3-2.jpg") fixed center no-repeat;
  background-size: 100% 100%;
  border-radius: 0 !important;
 }
 
 .webp .jumbotron {
- background: url("../img/understory-bg-blank-v3-1.webp") fixed center no-repeat;
+ background: url("../img/understory-bg-blank-v3-2.webp") fixed center no-repeat;
  background-size: 100% 100%;
  border-radius: 0 !important;
 }
 /* Nav background */
 .no-webp #main-nav {
-  background: url("../img/understory-bg-blank-v3-1.jpg") fixed center no-repeat;
+  background: url("../img/understory-bg-blank-v3-2.jpg") fixed center no-repeat;
   background-size: 100% 100%;
   border-radius: 0 !important;
 }
 
 .webp #main-nav {
-  background: url("../img/understory-bg-blank-v3-1.webp") fixed center no-repeat;
+  background: url("../img/understory-bg-blank-v3-2.webp") fixed center no-repeat;
   background-size: 100% 100%;
   border-radius: 0 !important;
 }
